--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ header {
 background-color:#FFFFFF;
 }
 .logo {
-text-decoration: none;
+text-decoration: none;  
 font-style: normal;
 font-weight: bold;
 font-size: 26px;
@@ -16,13 +16,13 @@ list-style: none;
 }
 /* site-nav */
 .site-nav  a {
+text-decoration: none;
 font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 color: #212121;
-text-decoration: none;
 }
 .site-nav a:hover,
 .site-nav a:focus {
@@ -30,13 +30,13 @@ color: #2196F3;
 }
 /* contacts */
 .contacts a {
+text-decoration: none;
 font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 14px;
 line-height: 16px;
 color: #757575;
-text-decoration: none;
 }
 .contacts a:hover,
 .contacts a:focus {
@@ -88,6 +88,9 @@ color:#212121;
 }
 
 /* footer */
+footer {
+background-color: #2F303A;
+}
 .logo-footer {
 text-decoration: none;
 font-style: normal;
@@ -97,30 +100,30 @@ line-height: 31px;
 color: #FFFFFF;
 color: #2196F3;
 }
-footer {
-background-color: #2F303A;
-}
-.address {
+
+.mail a, .tel a {
+text-decoration: none;
 font-style: normal;
 font-weight: normal;
 font-size: 14px;
 line-height: 24px;
-text-decoration: none;
-color: #FFFFFF; 
-}
-.address a {
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 24px;
-text-decoration: none;
 color: rgba(255, 255, 255, 0.6);
 }
+
+.map a {
+text-decoration: none;    
+font-style: normal;
+font-weight: normal;
+font-size: 14px;
+line-height: 24px;
+color: #FFFFFF;    
+}
+
 
 
 /* цвета текста
 основной - черный             #212121
-вторичный - серый             
+вторичный - серый             #757575
 белый                         #FFFFFF
 сероватый                     #E5E5E5
 команда                       #F5F4FA
