--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* --------------------------GLOBAL STYLES---------------------- */
 :root {
     --general-text-color: #757575;
     --headline-text-color: #212121;
@@ -5,66 +6,72 @@
     --accent-color-blue: #2196F3;
     --background-color-buttons: #F5F4FA
 }
-
 /* body */
 body {
 font-family: Roboto, sans-serif;
 font-style: normal;
 font-weight: 400;
 font-size: 14px;
-line-height: 1,2;
+line-height: 1.2;
 letter-spacing: 0.03em;
 color: var(--general-text-color);
 background-color: var(--general-background-color);
 }
-ul {list-style: none;}
-a {text-decoration: none; }
-
+.list-none {list-style: none;}
+.link-none {text-decoration: none;}
+.site-nav .link.current {
+color: var(--accent-color-blue);}
+.hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;}
+/* --------------------------STUDIO--------------------------------- */
 /* header */
 .logo {
 font-family: Raleway;
-font-style: normal;
-font-weight: 400;
+font-weight: 700;
 font-size: 26px;
-line-height: 1,2;
+line-height: 1.2;
 color: var(--accent-color-blue);
 }
-.logo span {color: #000;}
+.logo span {color: #000000;}
 
 /* site-nav */
-.site-nav  .link {
+.link {
 font-weight: 500;
+line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--headline-text-color);
 }
-.site-nav .link:hover,
-.site-nav .link:focus {
-color: var(--accent-color-blue);
-}
-.site-nav .link.current {
-color: var(--accent-color-blue);
-}
+.link:hover,
+.link:focus {
+color: var(--accent-color-blue);}
 
 /* site-contacts */
-.site-contacts .contact {
+.contact {
 font-weight: 500;
+line-height: 1.14;
 letter-spacing: 0.02em;
 color: inherit; 
 }
-
-.site-contacts .contact:hover,
-.site-contacts .contact:focus {
-color: var(--accent-color-blue);
-}
+.contact:hover,
+.contact:focus {
+color: var(--accent-color-blue);}
 
 /* hero */
 .hero {
-background-color: #2F303A;
-}
+background-color: #2F303A;}
 .hero-title {
 font-weight: 900;
 font-size: 44px;
-line-height: 1,4;
+line-height: 1.36;
 letter-spacing: 0.06em;
 text-align: center;
 text-transform: uppercase;
@@ -76,28 +83,34 @@ font-family: Roboto, sans-serif;
 font-style: normal;
 font-weight: 700;
 font-size: 16px;
-line-height: 1,9;
-display: flex;
-align-items: center;
+line-height: 1.87;
 text-align: center;
 letter-spacing: 0.06em;
 color: var(--general-background-color);
 background-color: var(--accent-color-blue);
+cursor: pointer;
 }
 .hero-button:hover {
-background-color: #188CE8;
-}
+background-color: #188CE8;}
+
 /* section-advantage */
-.advantage .advantage-title {
+.advantage {
+background-color: var(--general-background-color);
+}
+.advantage-title {
 font-weight: 700;
+line-height: 1.14;
 text-transform: uppercase;
 color: var(--headline-text-color);
 }
-.advantage .advantage-text {
-line-height: 1,7;
+.advantage-text {
+line-height: 1.71;
 }
 
 /* section-services */
+.services {
+background-color: var(--general-background-color);
+}
 .section-title {
 font-weight: 700;
 font-size: 36px;
@@ -107,12 +120,12 @@ color: var(--headline-text-color);
 .team {
 background-color: var(--background-color-buttons);
 }
-.team .team-title {
+.team-title {
 font-weight: 500;
 font-size: 16px;
 color: var(--headline-text-color);
 }
-.team .team-text {
+.team-text {
 font-size: 16px;
 }
 
@@ -120,53 +133,65 @@ font-size: 16px;
 footer {
 background-color: #2F303A;
 }
-.logo-footer {
+.logo-address {
 font-family: Raleway;    
 font-style: normal;
 font-weight: 400;
 font-size: 26px;
-line-height: 1,2;
+line-height: 1.2;
 color: var(--accent-color-blue);
 }
-.logo-footer span {
+.logo-address span {
 color: var(--general-background-color);    
 }
-.address .map-footer { 
-font-style: normal;  
-line-height: 1,7;
+address {
+font-style: inherit;
+line-height: 1.71; 
+}
+.map-address { 
 color: var(--general-background-color);   
 }
-.address .map-footer:hover, 
-.address .map-footer:focus {
+.map-address:hover, 
+.map-address:focus {
 color: var(--accent-color-blue);  
 } 
-.address .contact-footer {
-font-style: normal;
-line-height: 1,7;
+.contact-address {
 color: rgba(255, 255, 255, 0.6);
 }
-.address .contact-footer:hover,
-.address .contact-footer:focus {
+.contact-address:hover,
+.contact-address:focus {
 color: var(--accent-color-blue);  
 }
-/* PORTFOLIO */
+/*----------------------------- PORTFOLIO -----------------------------*/
 
 /* filter buttons */
-     .buttons-filter .filter {
+.btn-filter {
 font-family: Roboto;
 font-style: normal;
 font-weight: 500;
 font-size: 16px;
-line-height: 1,6;
+line-height: 1.6;
 text-align: center;
 letter-spacing: 0.03em;
-color: #212121;
-background-color: #F5F4FA;
+color: var(--headline-text-color);
+background-color: var(--background-color-buttons);
 cursor: pointer;
 }
+.btn-filter:hover,
+.btn-filter:focus {
+color: var(--general-background-color);
+background: var(--accent-color-blue);}
 
-.buttons-filter .filter:hover,
-.buttons-filter .filter:focus {
-color: #FFFFFF;
-background: #2196F3;
+    .examples-title {
+font-weight: 700;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: var(--headline-text-color);
+    }
+
+    .examples-text {
+font-size: 16px;
+line-height: 1.87px;
+color: var(--general-text-color);
     }
